src/test/resources/Parser/SyntaxErrors/WrongNumberOfTypeArguments2.front
class A<T>:
    A a;